Add fonts: "Assistant", "Mouse Memoirs"

--- a/public/main.css
+++ b/public/main.css
@@ -1,1 +1,39 @@
 
+@font-face {
+  font-family: 'Mouse Memoirs';
+  font-style: normal;
+  font-weight: 400;
+  src: url('fonts/mouse-memoirs-v13-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Assistant';
+  font-style: normal;
+  font-weight: 300;
+  src: local(''),
+    url('fonts/assistant-v16-latin-300.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Assistant';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+    url('fonts/assistant-v16-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Assistant';
+  font-style: normal;
+  font-weight: 500;
+  src: local(''),
+    url('fonts/assistant-v16-latin-500.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Assistant';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''),
+    url('fonts/assistant-v16-latin-700.woff2') format('woff2');
+}
