--- a/public/main.css
+++ b/public/main.css
@@ -61,6 +61,26 @@ aside > * + * {
   margin-top: 24px;
 }
 
+details summary {
+  cursor: pointer;
+}
+
+details p {
+  margin-top: 8px;
+}
+
+details[open] summary {
+  font-weight: 700;
+}
+
+details[open] + * {
+  margin-top: 12px;
+}
+
+summary:hover {
+  font-weight: 700;
+}
+
 
 @font-face {
   font-family: 'Mouse Memoirs';
