--- a/public/main.css
+++ b/public/main.css
@@ -81,6 +81,11 @@ summary:hover {
   font-weight: 700;
 }
 
+canvas {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 
 @font-face {
   font-family: 'Mouse Memoirs';
