--- a/public/main.css
+++ b/public/main.css
@@ -87,6 +87,26 @@ summary:hover {
   font-weight: 700;
 }
 
+input[type='radio'] {
+  display: none;
+}
+
+input[type='radio'] + label {
+  display: inline-block;
+  margin-top: 4px;
+  margin-right: 6px;
+  padding: 2px 6px;
+  color: #ffffff;
+  background-color: #222222;
+  cursor: pointer;
+}
+
+input[type='radio']:checked + label,
+input[type='radio'] + label:hover {
+  color: #111111;
+  background-color: #ffffff;
+}
+
 canvas {
   width: 100%;
   height: 100%;
